package com.furnadelampiao.enums;

public enum CategoriaAmostra {
    MINERAL,
    BIOLOGICA,
    GEOLOGICA,
    ARQUEOLOGICA,
    PALEONTOLOGICA,
    OUTRA
}
