package com.furnadelampiao.enums;

public enum NivelDificuldadeSetor {
    BAIXO,
    MODERADO,
    ALTO,
    EXTREMO
}
