package com.furnadelampiao.enums;

public enum PapelParticipante {
    PESQUISADOR,
    GUIA_ESPELEOLOGICO,
    COORDENADOR,
    FOTOGRAFO,
    TECNICO,
    AUXILIAR
}
