package com.furnadelampiao.enums;

public enum SituacaoAutorizacao {
    PENDENTE,
    VIGENTE,
    EXPIRADA,
    NEGADA
}