package com.furnadelampiao.enums;

public enum SituacaoExpedicao {
    PLANEJADA,
    AUTORIZADA,
    EM_ANDAMENTO,
    CONCLUIDA,
    CANCELADA
}
