package com.furnadelampiao.enums;

public enum SituacaoValidacaoColeta {
    PENDENTE,
    VALIDADA,
    REJEITADA
}
