package com.furnadelampiao.enums;

public enum TipoEquipamento {
    CAMERA,
    GPS,
    LANTERNA,
    CAPACETE,
    CORDA,
    DETECTOR_DE_GASES,
    OUTRO
}
