@startuml SystemClassDiagram

class Pessoa {
    - id: Long
    - nome: String
    - cpf: String
    - dataNasc: LocalDate
    - email: String
    - telefone: String
    - situacaoAtiva: boolean
    - endereco: Endereco
}

class Endereco <<Embeddable>> {
    - logradouro: String
    - numero: int
    - complemento: String
    - bairro: String
    - cidade: String
    - uf: Enum
    - cep: String
}

class Pesquisador {
    - numRegistroInstitucional: String
    - areaPrincipalPesquisa: String
    - titulacao: Enum
    - valorDiarioBolsa: BigDecimal
}

class GuiaEspeleologico {
    - numCredenciamento: String
    - nivelCertificacao: Enum
    - dataValidadeCertificacao: LocalDate
    - qtdExpedicoesConcluidas: int
}

class Participacao {
    - id: Long
    - papel: PapelParticipante
    - dataConfirmacao: LocalDate
    - valorDiaria: BigDecimal
    - qtdPrevistaDias: int
    - presencaConfirmada: boolean
    - observacoes: String
}

class Caverna {
    - id: Long
    - nomeOficial: String
    - codCadastroAmbiental: String
    - municipio: String
    - uf: Enum
    - coordenadas: Localizacao
    - altitude: BigDecimal
    - extensao: BigDecimal
    - dataUltimaInspecao: LocalDate
    - acessoAtualmentePermitido: boolean
}

class Localizacao <<Embeddable>> {
    - latitude: BigDecimal
    - longitude: BigDecimal
    - datumGeodesico: String
}

class Setor {
    - id: Long
    - denominacao: String
    - nivelEstimadoDificuldade: NivelDificuldadeSetor
    - profundidadeMaxima: BigDecimal
    - extensaoAproximada: BigDecimal
    - descricao: String
    - riscoInundacao: BigDecimal
    - condicaoCorrente: Enum
}

class Expedicao {
    - id: Long
    - codigo: String
    - titulo: String
    - objetivo: String
    - inicioPrevisto: LocalDateTime
    - terminoPrevisto: LocalDateTime
    - orcamentoAprovado: BigDecimal
    - custoRealizado: BigDecimal
    - qtdMaxParticipantes: int
    - situacao: SituacaoExpedicao
    - cancelamentoEmergencial: boolean
}

class PlanoSeguranca {
    - id: Long
    - procedimentosEvacuacao: List<String>
    - pontoExternoEncontro: Localizacao
    - tempoMaxSemComunicacao: int
    - telefoneEmergencia: String
    - necessidadeEquipeMedica: boolean
    - mapaRota: byte[]
}

class AutorizacaoAmbiental {
    - id: Long
    - num: int
    - orgaoEmissor: String
    - dataEmissao: LocalDate
    - validade: LocalDate
    - situacao: SituacaoAutorizacao
    - observacoes: String
    - arquivoPdfAssinado: byte[]
}

class Equipamento {
    - id: Long
    - codPatrimonial: String
    - nome: String
    - tipo: TipoEquipamento
    - fabricante: String
    - valorAquisicao: BigDecimal
    - dataCompra: LocalDate
    - dataUltimaManutencao: LocalDate
    - situacaoOperacional: SituacaoOperacionalEquipamento
    - indicacaoCalibracao: boolean
}

class Movimentacao {
    - id: Long
    - datahoraRetirada: LocalDateTime
    - previsao: LocalDate
    - dataDevolucao: LocalDate
    - estadoSaida: Enum
    - estadoRetorno: Enum
    - custoAvaria: BigDecimal
}

class ColetaCientifica {
    - id: Long
    - dataHora: LocalDateTime
    - metodoEmpregado: Enum
    - descricaoPonto: String
    - temperatura: BigDecimal
    - umidadeRelativa: BigDecimal
    - profundidade: BigDecimal
    - observacoes: String
    - situacaoValidacao: SituacaoValidacaoColeta
}

class Amostra {
    - id: Long
    - codCampo: String
    - categoria: CategoriaAmostra
    - volume: BigDecimal
    - unidadeMedida: Enum
    - dataAcondicionamento: LocalDate
    - condicaoConservacao: CondicaoConservacao
    - indicacaoMaterialPerigoso: boolean
    - fotografia: byte[]
    - observacoes: String
}

class Relatorio {
    - id: Long
    - titulo: String
    - resumo: String
    - dataSubmissao: LocalDate
    - numPaginas: int
    - situacaoAprovacao: SituacaoRelatorio
    - arquivoCompleto: byte[]
    - indicacaoPublicacaoAutorizada: boolean
}

enum SituacaoExpedicao {
    PLANEJADA
    AUTORIZADA
    EM_ANDAMENTO
    CONCLUIDA
    CANCELADA
}

enum NivelDificuldadeSetor {
    BAIXO
    MODERADO
    ALTO
    EXTREMO
}

enum PapelParticipante {
    COORDENADOR
    PESQUISADOR
    GUIA
    APOIO_LOGISTICO
}

enum SituacaoAutorizacao {
    PENDENTE
    VIGENTE
    EXPIRADA
    NEGADA
}

enum SituacaoOperacionalEquipamento {
    DISPONIVEL
    EM_USO
    EM_MANUTENCAO
    INATIVO
}

enum TipoEquipamento {
    ILUMINACAO
    PROTECAO
    MEDICAO
    COMUNICACAO
    COLETA
}

enum SituacaoValidacaoColeta {
    PENDENTE
    VALIDADA
    REJEITADA
}

enum CategoriaAmostra {
    ROCHA
    AGUA
    SEDIMENTO
    BIOLOGICA
}

enum CondicaoConservacao {
    ADEQUADA
    COMPROMETIDA
    DESCARTADA
}

enum SituacaoRelatorio {
    EM_ELABORACAO
    SUBMETIDO
    APROVADO
    REJEITADO
}

Pessoa <|-- Pesquisador
Pessoa <|-- GuiaEspeleologico
Pessoa "1" *-- "1" Endereco

Pessoa "1" --> "0..*" Participacao
Expedicao "1" --> "0..*" Participacao
Caverna "1" *-- "0..*" Setor
Caverna "1" --> "0..*" Expedicao
Expedicao "0..*" --> "0..*" Setor : visita >
Expedicao "1" *-- "1" PlanoSeguranca
Expedicao "1" --> "0..*" AutorizacaoAmbiental : histórico >
Pessoa "1" --> "0..*" Movimentacao : responsável retirada >
Equipamento "1" --> "0..*" Movimentacao
Expedicao "1" --> "0..*" Movimentacao
Expedicao "1" --> "0..*" ColetaCientifica
Setor "1" --> "0..*" ColetaCientifica
Pesquisador "1" --> "0..*" ColetaCientifica : responsável >
ColetaCientifica "1" --> "0..*" Amostra
Expedicao "1" --> "0..1" Relatorio
Caverna "1" *-- "1" Localizacao

Setor --> NivelDificuldadeSetor
Expedicao --> SituacaoExpedicao
AutorizacaoAmbiental --> SituacaoAutorizacao
Participacao --> PapelParticipante
Equipamento --> TipoEquipamento
Equipamento --> SituacaoOperacionalEquipamento
ColetaCientifica --> SituacaoValidacaoColeta
Amostra --> CategoriaAmostra
Amostra --> CondicaoConservacao
Relatorio --> SituacaoRelatorio

@enduml